[B][COLOR gold]v2.1.8[/COLOR][/B]
- Some more debrid cache check fixes

[B][COLOR gold]v2.1.7[/COLOR][/B]
- Added Premiumize to supported providers for debrid cache check

[B][COLOR gold]v2.1.6[/COLOR][/B]
- Debrid-check code alterations

[B][COLOR gold]v2.1.5[/COLOR][/B]
- Added AllDebrid torrents cache check support

[B][COLOR gold]v2.1.4[/COLOR][/B]
- Playback: bookmark, resume, scrobble, subs notification improvements

[B][COLOR gold]v2.1.2[/COLOR][/B]
- Added notification upon subtitles download (optional)
- Debrid cache check dialog fixes

[B][COLOR gold]v2.1.1[/COLOR][/B]
- Label work

[B][COLOR gold]v2.1.0[/COLOR][/B]
- Added option to sort torrents by file size. It will only work for the Oathscrapers pack
    and the built-in Orion scraper for now

[B][COLOR gold]v2.0.5[/COLOR][/B]
- Trailers: for now user's youtube add-on's api key will be used (provided one was deleted)
    ie trailers will only work if user has an already working youtube add-on
- Hopefully fixed r-d cache check failing if r-d token had expired

[B][COLOR gold]v2.0.4[/COLOR][/B]
- Fix: prevent torrents resolved by services other than R-D to be checked/marked,
    if services other than R-D are also enabled

[B][COLOR gold]v2.0.3[/COLOR][/B]
- Debrid cache check updates

[B][COLOR gold]v2.0.0[/COLOR][/B]
- Added Real-Debrid torrents cache check
    *Expiremental. Most code adjusted from Fen add-on - many thanks
- Added option to remove metadata from directory source list, for faster loading

[B][COLOR gold]v1.9.32[/COLOR][/B]
- Fixed Clean Settings File function for Kodi versions older than 18 (thx Tikipeter!)
- More code cleanup (Note: re-set your "Max Quality" setting - 1440p option has been removed)
- Orionoid tweaks

[B][COLOR gold]v1.9.31[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v1.9.29[/COLOR][/B]
- Attempt to fix various issues with TV Shows

[B][COLOR gold]v1.9.28[/COLOR][/B]
- Moved CAM/SCR results at the bottom of the source list