@@ -100,6 +100,9 @@
         <setting id="tm.user" type="text" option="hidden" label="TMDB API key" default="" />
         <setting type="lsep" label="32627" />
         <setting id="imdb.user" type="text" label="32303" default="" />
+        <setting type="lsep" label="Opensubtitles.org" />
+        <setting id="os.user" type="text" label="32117" default="" />
+        <setting id="os.pass" type="text" option="hidden" label="32307" default="" />
         <setting type="lsep" label="32539" />
         <setting id="open_smu_settings" type="action" label="32540" enable="true" option="close" action="RunPlugin(plugin://plugin.video.theoath/?action=smuSettings)" />
         <setting type="lsep" label="Ororo.tv" />
@@ -147,6 +150,7 @@
         <setting type="sep" />
         <setting id="subtitles.utf" type="bool" label="32355" enable="!eq(-5,false)" default="false" />
         <setting id="subtitles.notify" type="bool" label="32361" enable="!eq(-6,false)" default="true" />
+        <setting type="text" label="32118" enable="false" />
     </category>
 
     <category label="Debugging">
